Modify Christmas message in page4.html
Updated the Christmas message with additional text.

--- a/page4.html
+++ b/page4.html
@@ -78,7 +78,7 @@ function createStar(){
 setInterval(createStar,250);
 
 /* TYPING MESSAGE */
-const text="Hey Dear! Wishing you a Merry Christmas filled with joy, love, and warmth. May this festive season bring you happiness and unforgettable moments with your loved ones.";
+const text="Hey Dear! Wishing you a Merry Christmas filled with joy, love, and warmth. May this festive season bring you happiness and unforgettable moments with your loved ones. and please don't be angry on me because i made this and said derman to send you,ik u said that i don't want this kind of of stuff anymore, sorry again and merry Christmas";
 let i=0;
 const t=document.getElementById("typing");
 
@@ -92,3 +92,4 @@ const t=document.getElementById("typing");
 
 </body>
 </html>
+
